<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        tools:ignore="MissingConstraints,VisualLintBounds">

        <EditText
            android:id="@+id/input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="viewEnd"
            android:text="@string/display"
            android:textSize="34sp"
            android:inputType="text"
            tools:ignore="LabelFor"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/Result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/result"
            android:textAlignment="viewEnd"
            android:textSize="34sp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/button1"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="82dp"
                    android:layout_height="wrap_content"
                    android:insetLeft="2dp"
                    android:insetRight="2dp"
                    android:onClick="sevenBTN"
                    android:text="@string/seven" />

                <Button
                    android:id="@+id/button2"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="82dp"
                    android:layout_height="wrap_content"
                    android:insetLeft="2dp"
                    android:insetRight="2dp"
                    android:onClick="eightBTN"
                    android:text="@string/eight" />

                <Button
                    android:id="@+id/button3"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="82dp"
                    android:layout_height="wrap_content"
                    android:insetLeft="2dp"
                    android:insetRight="2dp"
                    android:onClick="nineBTN"
                    android:text="@string/nine" />

                <Button
                    android:id="@+id/button4"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="82dp"
                    android:layout_height="wrap_content"
                    android:insetLeft="4dp"
                    android:insetRight="2dp"
                    android:onClick="deleteBTN"
                    android:text="@string/delete" />

                <Button
                    android:id="@+id/button5"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="82dp"
                    android:layout_height="wrap_content"
                    android:insetLeft="2dp"
                    android:insetRight="2dp"
                    android:onClick="clearBTN"
                    android:text="@string/clear"
                    tools:ignore="VisualLintBounds" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/button6"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="82dp"
                    android:layout_height="wrap_content"
                    android:insetLeft="2dp"
                    android:insetRight="2dp"
                    android:onClick="fourBTN"
                    android:text="@string/four" />

                <Button
                    android:id="@+id/button7"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="82dp"
                    android:layout_height="wrap_content"
                    android:insetLeft="2dp"
                    android:insetRight="2dp"
                    android:onClick="fiveBTN"
                    android:text="@string/five" />

                <Button
                    android:id="@+id/button8"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="82dp"
                    android:layout_height="wrap_content"
                    android:insetLeft="2dp"
                    android:insetRight="2dp"
                    android:onClick="sixBTN"
                    android:text="@string/six" />

                <Button
                    android:id="@+id/button9"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="82dp"
                    android:layout_height="wrap_content"
                    android:insetLeft="4dp"
                    android:insetRight="2dp"
                    android:onClick="minusBTN"
                    android:text="@string/minus" />

                <Button
                    android:id="@+id/button10"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="82dp"
                    android:layout_height="wrap_content"
                    android:insetLeft="2dp"
                    android:insetRight="2dp"
                    android:onClick="divideBTN"
                    android:text="@string/divide"
                    tools:ignore="VisualLintBounds" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/button11"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="82dp"
                    android:layout_height="wrap_content"
                    android:insetLeft="2dp"
                    android:insetRight="2dp"
                    android:onClick="oneBTN"
                    android:text="@string/one" />

                <Button
                    android:id="@+id/button12"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="82dp"
                    android:layout_height="wrap_content"
                    android:insetLeft="2dp"
                    android:insetRight="2dp"
                    android:onClick="twoBTN"
                    android:text="@string/two" />

                <Button
                    android:id="@+id/button13"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="82dp"
                    android:layout_height="wrap_content"
                    android:insetLeft="2dp"
                    android:insetRight="2dp"
                    android:onClick="threeBTN"
                    android:text="@string/three" />

                <Button
                    android:id="@+id/button14"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="82dp"
                    android:layout_height="wrap_content"
                    android:insetLeft="4dp"
                    android:insetRight="2dp"
                    android:onClick="plusBTN"
                    android:text="@string/plus" />

                <Button
                    android:id="@+id/button15"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="82dp"
                    android:layout_height="wrap_content"
                    android:insetLeft="2dp"
                    android:insetRight="2dp"
                    android:onClick="multiBTN"
                    android:text="@string/multi"
                    tools:ignore="VisualLintBounds" />
            </TableRow>

        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button16"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="82dp"
                android:layout_height="wrap_content"
                android:insetLeft="2dp"
                android:insetRight="2dp"
                android:onClick="zeroBTN"
                android:text="@string/Zero"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/button17"
                android:layout_width="164dp"
                android:layout_height="wrap_content"
                android:insetLeft="2dp"
                android:insetRight="2dp"
                android:onClick="equalsBTN"
                android:text="@string/equal"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/button18"
                android:layout_width="82dp"
                android:layout_height="wrap_content"
                android:insetLeft="4dp"
                android:insetRight="2dp"
                android:onClick="dotBTN"
                android:text="@string/dot"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/button19"
                android:layout_width="82dp"
                android:layout_height="wrap_content"
                android:insetLeft="2dp"
                android:insetRight="2dp"
                android:onClick="percentBTN"
                android:text="@string/percent"
                style="?android:attr/buttonBarButtonStyle"
                tools:ignore="VisualLintBounds" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>